ListMarketItemsAuthorized method
