# docs/swagger.yaml
@@ -654,6 +654,27 @@ paths:
       summary: Delete Market Item
       tags:
       - market_items
+  /market-items/authorized/:
+    get:
+      operationId: list_market_items_authorized
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - JWT: []
+      summary: Get Market Items Authorized
+      tags:
+      - market_items
   /series/:
     get:
       operationId: list_lego_series
